# navigator

./: .dockerignore  .gitignore  Dockerfile  FINDINGS.md  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile.dev  pyproject.toml
backend/app/: api.py  config.py  launcher.py  main.py  manifests.py  seed.py  store.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_health.py  test_static.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  NavData.tsx  api.ts  data.ts  index.css  main.tsx  navData-context.ts
frontend/src/components/: Icon.tsx  Inbox.tsx  Modals.tsx  Overview.tsx  Portal.tsx  Tweaks.tsx  atoms.tsx
frontend/src/lib/: inbox.tsx  prompts.ts  tweaks.ts
frontend/src/styles/: styles-v2.css  styles-v3.css  styles-v4.css  styles.css
